tests/hulk/errors/syntactic/missing_colon.hulk
function f(x Number): Number {
    x;
}

print(f(5));
